@@ -12,7 +12,7 @@ for loc, spine in ax.spines.iteritems():
     if loc in ['left','bottom']:
         spine.set_position(('outward',10)) # outward by 10 points
     elif loc in ['right','top']:
-        spine.set_color('none') # don't draw spine
+        spine.set_edgecolor('none') # don't draw spine
     else:
         raise ValueError('unknown spine location: %s'%loc)
 
@@ -34,9 +34,9 @@ ax = fig.add_subplot(2,2,1)
 ax.set_title('centered spines')
 ax.plot(x,y)
 ax.spines['left'].set_position('center')
-ax.spines['right'].set_color('none')
+ax.spines['right'].set_edgecolor('none')
 ax.spines['bottom'].set_position('center')
-ax.spines['top'].set_color('none')
+ax.spines['top'].set_edgecolor('none')
 ax.xaxis.set_ticks_position('bottom')
 ax.yaxis.set_ticks_position('left')
 
@@ -44,9 +44,9 @@ ax = fig.add_subplot(2,2,2)
 ax.set_title('zeroed spines')
 ax.plot(x,y)
 ax.spines['left'].set_position('zero')
-ax.spines['right'].set_color('none')
+ax.spines['right'].set_edgecolor('none')
 ax.spines['bottom'].set_position('zero')
-ax.spines['top'].set_color('none')
+ax.spines['top'].set_edgecolor('none')
 ax.xaxis.set_ticks_position('bottom')
 ax.yaxis.set_ticks_position('left')
 
@@ -54,9 +54,9 @@ ax = fig.add_subplot(2,2,3)
 ax.set_title('spines at axes (0.6, 0.1)')
 ax.plot(x,y)
 ax.spines['left'].set_position(('axes',0.6))
-ax.spines['right'].set_color('none')
+ax.spines['right'].set_edgecolor('none')
 ax.spines['bottom'].set_position(('axes',0.1))
-ax.spines['top'].set_color('none')
+ax.spines['top'].set_edgecolor('none')
 ax.xaxis.set_ticks_position('bottom')
 ax.yaxis.set_ticks_position('left')
 
@@ -64,9 +64,9 @@ ax = fig.add_subplot(2,2,4)
 ax.set_title('spines at data (1,2)')
 ax.plot(x,y)
 ax.spines['left'].set_position(('data',1))
-ax.spines['right'].set_color('none')
+ax.spines['right'].set_edgecolor('none')
 ax.spines['bottom'].set_position(('data',2))
-ax.spines['top'].set_color('none')
+ax.spines['top'].set_edgecolor('none')
 ax.xaxis.set_ticks_position('bottom')
 ax.yaxis.set_ticks_position('left')
 
@@ -77,7 +77,7 @@ def adjust_spines(ax,spines):
         if loc in spines:
             spine.set_position(('outward',10)) # outward by 10 points
         else:
-            spine.set_color('none') # don't draw spine
+            spine.set_edgecolor('none') # don't draw spine
 
     # turn off ticks where there is no spine
     if 'left' in spines:
