@@ -1,3 +1,5 @@
+2009-06-01 Spine is now derived from Patch - ADS
+
 2009-06-01 use cbook.is_string_like() instead of isinstance() for spines - ADS
 
 2009-06-01 cla() support for spines - ADS
